--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,12 +8,12 @@ on:
 jobs:
     run-monitor-job:
       runs-on: ubuntu-latest
-      name: Master-url-monitor-is-my-name
+      name: Master-applitools-github-integration
 
       steps:
         - uses: actions/checkout@v2
           with:
-            ref: Main
+            ref: main
         - uses: actions/setup-node@v2
           with:
             node-version: '16'
