--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,3 +23,5 @@ jobs:
         - run: npm test
           env:
             APPLITOOLS_API_KEY: ${{secrets.APPLITOOLS_API_KEY_DEMO_1}}
+            APPLITOOLS_BATCH_ID: ${{ github.sha }}
+            APPLITOOLS_SERVER_URL : "eyesapi.applitools.com"
