--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,9 @@ on:
    #   branches: [ main ]
    # schedule:
    #     - cron:  '*/15 * * * *'   
-    workflow_dispatch:
+   # pull_request:
+   #  types: [opened, reopened]
+   workflow_dispatch:
 
 jobs:
     run-monitor-job:
@@ -11,6 +13,10 @@ jobs:
       name: Master-applitools-github-integration
 
       steps:
+        - name: curl
+          uses: wei/curl@v1
+          with:
+           args: -L -d '' -X POST "$APPLITOOLS_SERVER_URL/api/externals/github/push?apiKey=$${{secrets.APPLITOOLS_API_KEY_DEMO_1}}&CommitSha=${{github.sha}}&BranchName=$APPLITOOLS_BRANCH&ParentBranchName=$APPLITOOLS_PARENT_BRANCH"
         - uses: actions/checkout@v2
           with:
             ref: main
@@ -22,6 +28,8 @@ jobs:
         - run: npm install
         - run: npm test
           env:
-            APPLITOOLS_API_KEY: ${{secrets.APPLITOOLS_API_KEY_DEMO_1}}
+            APPLITOOLS_API_KEY: ${{ secrets.APPLITOOLS_API_KEY_DEMO_1 }}
             APPLITOOLS_BATCH_ID: ${{ github.sha }}
             APPLITOOLS_SERVER_URL : "eyesapi.applitools.com"
+            APPLITOOLS_BRANCH: ${{ github.ref }}
+            APPLITOOLS_PARENT_BRANCH: ${{ github.base_ref }}
