--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,6 +1,4 @@
 on: 
-   # push:
-   #   branches: [ main ]
    # schedule:
    #     - cron:  '*/15 * * * *'   
    # pull_request:
@@ -19,7 +17,7 @@ jobs:
            args: -L -d '' -X POST "$APPLITOOLS_SERVER_URL/api/externals/github/push?apiKey=$${{secrets.APPLITOOLS_API_KEY_DEMO_1}}&CommitSha=${{github.sha}}&BranchName=$APPLITOOLS_BRANCH&ParentBranchName=$APPLITOOLS_PARENT_BRANCH"
         - uses: actions/checkout@v2
           with:
-            ref: main
+            ref: ${{ github.ref }}
         - uses: actions/setup-node@v2
           with:
             node-version: '16'
