--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -4,6 +4,13 @@ on:
    # pull_request:
    #  types: [opened, reopened]
    workflow_dispatch:
+   
+env:
+  APPLITOOLS_API_KEY: ${{ secrets.APPLITOOLS_API_KEY_DEMO_1 }}
+  APPLITOOLS_BATCH_ID: ${{ github.sha }}
+  APPLITOOLS_SERVER_URL : "https://eyesapi.applitools.com"
+  APPLITOOLS_BRANCH: ${{ github.ref }}
+  APPLITOOLS_PARENT_BRANCH: ${{ github.base_ref }}
 
 jobs:
     run-monitor-job:
@@ -11,17 +18,23 @@ jobs:
       name: Master-applitools-github-integration
 
       steps:
-        - name: curl
+        - if: ${{ github.event.pull_request }}
+          run: echo "APPLITOOLS_BATCH_ID=${{ github.event.pull_request.head.sha }}" >> $GITHUB_ENV
+        
+        - name: Let Applitools know about PR
           uses: wei/curl@v1
           with:
            args: -L -d '' -X POST "$APPLITOOLS_SERVER_URL/api/externals/github/push?apiKey=$${{secrets.APPLITOOLS_API_KEY_DEMO_1}}&CommitSha=${{github.sha}}&BranchName=$APPLITOOLS_BRANCH&ParentBranchName=$APPLITOOLS_PARENT_BRANCH"
+        
         - uses: actions/checkout@v2
           with:
             ref: ${{ github.ref }}
+        
         - uses: actions/setup-node@v2
           with:
             node-version: '16'
         - uses: browser-actions/setup-chrome@latest
+        
         - run: npm install
         
       # < to run headed>
