--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -10,7 +10,7 @@ on:
 env:
   APPLITOOLS_API_KEY: ${{ secrets.APPLITOOLS_API_KEY_DEMO_1 }}
   APPLITOOLS_BATCH_ID: ${{ github.sha }}
-  APPLITOOLS_BATCH_NAME: ${{ github.workflow }} ':#' ${{ github.run_number }}
+  APPLITOOLS_BATCH_NAME: ${{ github.workflow }}:#${{ github.run_number }}
   APPLITOOLS_SERVER_URL : "https://eyesapi.applitools.com"
   APPLITOOLS_BRANCH: ${{ github.ref }}
   APPLITOOLS_PARENT_BRANCH: ${{ github.base_ref }}
