--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,4 +1,4 @@
-name: Process Pull Request
+name: Process Pull Request (Main)
 
 on: 
    # schedule:
@@ -18,7 +18,7 @@ env:
 jobs:
     run-monitor-job:
       runs-on: ubuntu-latest
-      name: Master-applitools-github-integration
+      name: applitools-github-integration
 
       steps:
         - if: ${{ github.event.pull_request }}
