--- a/.github/workflows/applitools.yml
+++ b/.github/workflows/applitools.yml
@@ -13,8 +13,8 @@ env:
   APPLITOOLS_BATCH_ID: ${{ github.sha }}
   APPLITOOLS_BATCH_NAME: ${{ github.workflow }} ${{ github.event_name }}:#${{ github.run_number }}
   APPLITOOLS_SERVER_URL : "https://eyesapi.applitools.com"
- # APPLITOOLS_BRANCH: ${{ github.ref_name }}
- # APPLITOOLS_PARENT_BRANCH: ${{ github.base_ref }}
+  APPLITOOLS_BRANCH: ${{ github.ref_name }}
+  APPLITOOLS_PARENT_BRANCH: ${{ github.base_ref }}
 
 jobs:
     run-monitor-job:
@@ -25,7 +25,7 @@ jobs:
         - name: Notify Applitools
           uses: wei/curl@v1
           with:
-           args: -L -d '' -X POST "$APPLITOOLS_SERVER_URL/api/externals/github/push?apiKey=$${{secrets.APPLITOOLS_API_KEY_DEMO_1}}&CommitSha=${{github.sha}}&BranchName=$APPLITOOLS_BRANCH&ParentBranchName=$APPLITOOLS_PARENT_BRANCH"
+           args: -L -d -v '' -X POST "$APPLITOOLS_SERVER_URL/api/externals/github/push?apiKey=$${{secrets.APPLITOOLS_API_KEY_DEMO_1}}&CommitSha=${{github.sha}}&BranchName=$APPLITOOLS_BRANCH&ParentBranchName=$APPLITOOLS_PARENT_BRANCH"
         
         - uses: actions/checkout@v2
           with:
