--- a/.github/workflows/applitools.yml
+++ b/.github/workflows/applitools.yml
@@ -13,7 +13,7 @@ env:
   APPLITOOLS_BATCH_ID: ${{ github.sha }}
   APPLITOOLS_BATCH_NAME: ${{ github.workflow }} ${{ github.event_name }}:#${{ github.run_number }}
   APPLITOOLS_SERVER_URL : "https://eyesapi.applitools.com"
-  APPLITOOLS_BRANCH: ${{ github.head_ref }}
+  APPLITOOLS_BRANCH: ${{ github.ref_name }}
   APPLITOOLS_PARENT_BRANCH: ${{ github.base_ref }}
 
 jobs:
