--- a/.github/workflows/applitools.yml
+++ b/.github/workflows/applitools.yml
@@ -5,7 +5,7 @@ on:
    #     - cron:  '*/15 * * * *'   
    # push:
    pull_request:
-     types: [opened, reopened]
+   #  types: [opened, reopened]
    workflow_dispatch:
    
 env:
