--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,16 +11,7 @@ env:
   APPLITOOLS_BATCH_ID: ${{ github.sha }}
   APPLITOOLS_BATCH_NAME: Run ${{ github.run_number }} ${{ github.base_ref }}
   APPLITOOLS_SERVER_URL : "https://eyesapi.applitools.com"
-  APPLITOOLS_BRANCH: ${{ github.head_ref }}
-  APPLITOOLS_PARENT_BRANCH: ${{ github.base_ref }}
-  ACTION_REPOSITORY: ${{ github.action_repository }}
-  ACTION_REF: ${{ github.action_ref }}
-  BASE_REF: ${{ github.base_ref }}
-  HEAD_REF: ${{ github.head_ref }}
-  REF: ${{ github.ref }}
-  REF_NAME: ${{ github.ref_name }}
-  RUN_ID: ${{ github.run_id }}
-
+  APPLITOOLS_BRANCH: ${{ github.ref_name }}
 
 
 jobs:
