--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,7 @@ env:
   APPLITOOLS_BATCH_NAME: Run ${{ github.run_number }} ${{ github.ref_name }}
   APPLITOOLS_SERVER_URL : "https://eyesapi.applitools.com"
   APPLITOOLS_BASELINE_BRANCH_NAME: ${{ github.ref_name }}
+  APPLITOOLS_BRANCH_NAME: ${{ github.ref_name }}
 
 
 jobs:
