--- a/.github/workflows/applitools.yml
+++ b/.github/workflows/applitools.yml
@@ -24,7 +24,6 @@ env:
   RUN_ID: ${{ github.run_id }}
 
 
-
 jobs:
     run-monitor-job:
       runs-on: ubuntu-latest
@@ -34,8 +33,8 @@ jobs:
         - name: Notify Applitools
           uses: wei/curl@v1
           with:
-           # args: -L -d -v '' -X POST "https://eyesapi.applitools.com/api/externals/github/push?apiKey=$${{secrets.APPLITOOLS_API_KEY_DEMO_1}}&CommitSha=${{github.sha}}&BranchName=${{ github.ref_name }}&ParentBranchName=${{ github.base_ref }}"
-           args: -d \"\" -X POST "${{ env.APPLITOOLS_SERVER_URL }}/api/Externals/github/servers/github.com/commit/${{ env.APPLITOOLS_BATCH_ID }}/complete?apiKey=${{ env.APPLITOOLS_API_KEY }}"
+           args: -L -d -v '' -X POST "https://eyesapi.applitools.com/api/externals/github/push?apiKey=$${{secrets.APPLITOOLS_API_KEY_DEMO_1}}&CommitSha=${{ env.APPLITOOLS_BATCH_ID }}&BranchName=${{ env.APPLITOOLS_BRANCH }}&ParentBranchName=${{ env.APPLITOOLS_PARENT_BRANCH }}"
+           # args: -d \"\" -X POST "${{ env.APPLITOOLS_SERVER_URL }}/api/Externals/github/servers/github.com/commit/${{ env.APPLITOOLS_BATCH_ID }}/complete?apiKey=${{ env.APPLITOOLS_API_KEY }}"
 
         - uses: actions/checkout@v2
           with:
