--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         - uses: actions/setup-node@v2
           with:
             node-version: '16'
-        - uses: browser-actions/setup-chrome@latest
+        - uses: browser-actions/setup-chrome@99.0
         
         - run: npm install
         
