--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         - uses: actions/setup-node@v2
           with:
             node-version: '16'
-        - uses: browser-actions/setup-chrome@latest
+        - uses: browser-actions/setup-chrome@996506
         
         - run: npm install
         
