--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,4 +39,4 @@ jobs:
       #     export DISPLAY=:99
       #     chromedrive & sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & npm test
         
-        - run: CHROMIUM_BIN=/opt/hostedtoolcache/chromium/stable/x64 npm test
+        - run: npm test
