--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ env:
   APPLITOOLS_BASELINE_BRANCH: ${{ github.repository }}/${{ github.ref_name }}
   APPLITOOLS_PARENT_BRANCH: ${{ github.repository }}/${{ github.base_ref }}
   APPLITOOLS_BRANCH: ${{ github.repository }}/${{ github.ref_name }}
+  CHROMEDRIVER_EXE: "/opt/hostedtoolcache/chromium/stable/x64"
 
 jobs:
     run-monitor-job:
