--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,6 @@ env:
   APPLITOOLS_BASELINE_BRANCH: ${{ github.repository }}/${{ github.ref_name }}
   APPLITOOLS_PARENT_BRANCH: ${{ github.repository }}/${{ github.base_ref }}
   APPLITOOLS_BRANCH: ${{ github.repository }}/${{ github.ref_name }}
-  CHROMEDRIVER_EXE: "/opt/hostedtoolcache/chromium/stable/x64"
 
 jobs:
     run-monitor-job:
@@ -29,11 +28,12 @@ jobs:
         - uses: actions/setup-node@v2
           with:
             node-version: '16'
-        - uses: browser-actions/setup-chrome@latest
-          with:
-            chrome-version: stable
+        # - uses: browser-actions/setup-chrome@latest
+        #  with:
+        #    chrome-version: stable
         
-        - run: npm install
+        - run: npm ci
+        - run: npm install chromedriver --detect_chromedriver_version --no-save
         
       # < to run headed>
       #  - run: |
