--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,4 +49,4 @@ jobs:
       #     export DISPLAY=:99
       #     chromedrive & sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & npm test
         
-        - run: npm test
+        - run: npm run test
