--- a/.github/workflows/applitools.yml
+++ b/.github/workflows/applitools.yml
@@ -28,6 +28,10 @@ jobs:
     run-monitor-job:
       runs-on: ubuntu-latest
       name: applitools-github-integration
+      
+      strategy:
+        matrix:
+          node-version: [16.x]
 
       steps:
         - name: Notify Applitools
@@ -40,12 +44,13 @@ jobs:
           with:
             ref: ${{ github.ref }}
         
-        - uses: actions/setup-node@v2
+        - name: Use Node.js ${{ matrix.node-version }}
+          uses: actions/setup-node@v1
           with:
-            node-version: '16'
-        - uses: browser-actions/setup-chrome@latest
+            node-version: ${{ matrix.node-version }}
         
-        - run: npm install
+        - run: npm ci
+        - run: npm install chromedriver --detect_chromedriver_version --no-save
         
       # < to run headed>
       #  - run: |
