--- a/.github/workflows/applitools.yml
+++ b/.github/workflows/applitools.yml
@@ -3,7 +3,7 @@ name: Run Applitools
 on: 
    # schedule:
    #     - cron:  '*/15 * * * *'   
-   # push:
+   push:
    pull_request:
      types: [edited, opened, reopened]
    workflow_dispatch:
