--- a/.github/workflows/applitools.yml
+++ b/.github/workflows/applitools.yml
@@ -10,7 +10,8 @@ on:
    
 env:
   APPLITOOLS_API_KEY: ${{ secrets.APPLITOOLS_API_KEY_DEMO_1 }}
-  APPLITOOLS_BATCH_ID: ${{ github.event.pull_request.head.sha }}
+  # APPLITOOLS_BATCH_ID: ${{ github.event.pull_request.head.sha }}
+  APPLITOOLS_BATCH_ID: ${{ github.sha }}
   APPLITOOLS_BATCH_NAME: Run ${{ github.run_number }} ${{ github.head_ref }} ${{ github.base_ref }} ${{ github.event.pull_request.head.sha }}
   APPLITOOLS_SERVER_URL : "https://eyesapi.applitools.com"
   APPLITOOLS_BRANCH: ${{ github.repository }}/${{ github.head_ref }}
