--- a/.github/workflows/applitools.yml
+++ b/.github/workflows/applitools.yml
@@ -12,9 +12,11 @@ env:
   APPLITOOLS_API_KEY: ${{ secrets.APPLITOOLS_API_KEY_DEMO_1 }}
   # APPLITOOLS_BATCH_ID: ${{ github.event.pull_request.head.sha }}
   APPLITOOLS_BATCH_ID: ${{ github.sha }}
-  APPLITOOLS_BATCH_NAME: Run ${{ github.run_number }} ${{ github.ref_name }} ${{ github.head_ref }} ${{ github.base_ref }} ${{ github.event.pull_request.head.sha }}
+  # APPLITOOLS_BATCH_NAME: Run ${{ github.run_number }} ${{ github.ref_name }} ${{ github.head_ref }} ${{ github.base_ref }} ${{ github.event.pull_request.head.sha }}
+  APPLITOOLS_BATCH_NAME: Run id ${{ github.run_id }} - ${{ github.run_number }} ${{ github.ref_name }} 
   APPLITOOLS_SERVER_URL : "https://eyesapi.applitools.com"
-  APPLITOOLS_BRANCH: ${{ github.repository }}/${{ github.head_ref }}
+  # APPLITOOLS_BRANCH: ${{ github.repository }}/${{ github.head_ref }}
+  APPLITOOLS_BRANCH: ${{ github.repository }}/${{ github.ref_name }}
   APPLITOOLS_PARENT_BRANCH: ${{ github.repository }}/${{ github.base_ref }}
   REPOSITORY: ${{ github.repository }}
   ACTION_REF: ${{ github.action_ref }}
@@ -23,6 +25,7 @@ env:
   REF: ${{ github.ref }}
   REF_NAME: ${{ github.ref_name }}
   RUN_ID: ${{ github.run_id }}
+  SHA: ${{ github.sha }}
 
 
 jobs:
