--- a/.github/workflows/applitools.yml
+++ b/.github/workflows/applitools.yml
@@ -38,10 +38,10 @@ jobs:
           node-version: [16.x]
 
       steps:
-       # - name: Notify Applitools
-       #   uses: wei/curl@v1
-       #   with:
-       #    args: -L -d -v '' -X POST "${{env.APPLITOOLS_SERVER_URL}}/api/externals/github/push?apiKey=$${{secrets.APPLITOOLS_API_KEY_DEMO_1}}&CommitSha=${{ env.APPLITOOLS_BATCH_ID }}&BranchName=${{ env.APPLITOOLS_BRANCH }}&ParentBranchName=${{ env.APPLITOOLS_PARENT_BRANCH }}"
+        - name: Notify Applitools
+          uses: wei/curl@v1
+          with:
+            args: -L -d -v '' -X POST "${{env.APPLITOOLS_SERVER_URL}}/api/externals/github/push?apiKey=$${{secrets.APPLITOOLS_API_KEY_DEMO_1}}&CommitSha=${{ env.APPLITOOLS_BATCH_ID }}&BranchName=${{ env.APPLITOOLS_BRANCH }}&ParentBranchName=${{ env.APPLITOOLS_PARENT_BRANCH }}"
 
         - uses: actions/checkout@v2
           with:
