--- a/.github/workflows/applitools.yml
+++ b/.github/workflows/applitools.yml
@@ -4,8 +4,8 @@ on:
    # schedule:
    #     - cron:  '*/15 * * * *'   
    push:
-   # pull_request:
-     # types: [edited, opened, reopened]
+   pull_request:
+     types: [edited, opened, reopened]
    workflow_dispatch:
    
 env:
@@ -13,7 +13,7 @@ env:
   # APPLITOOLS_BATCH_ID: ${{ github.event.pull_request.head.sha }}
   APPLITOOLS_BATCH_ID: ${{ github.sha }}
   # APPLITOOLS_BATCH_NAME: Run ${{ github.run_number }} ${{ github.ref_name }} ${{ github.head_ref }} ${{ github.base_ref }} ${{ github.event.pull_request.head.sha }}
-  APPLITOOLS_BATCH_NAME: Run id ${{ github.run_id }} - ${{ github.run_number }} ${{ github.ref_name }} 
+  APPLITOOLS_BATCH_NAME: ${{ github.ref_name }} ${{ github.sha }} ${{ github.event_name }}
   APPLITOOLS_SERVER_URL : "https://eyesapi.applitools.com"
   # APPLITOOLS_BRANCH: ${{ github.repository }}/${{ github.head_ref }}
   APPLITOOLS_BRANCH: ${{ github.repository }}/${{ github.ref_name }}
@@ -26,6 +26,7 @@ env:
   REF_NAME: ${{ github.ref_name }}
   RUN_ID: ${{ github.run_id }}
   SHA: ${{ github.sha }}
+  EVENT_NAME: ${{ github.event_name }}
 
 
 jobs:
