--- a/.github/workflows/applitools.yml
+++ b/.github/workflows/applitools.yml
@@ -3,7 +3,7 @@ name: Run Applitools
 on: 
    # schedule:
    #     - cron:  '*/15 * * * *'   
-   push:
+   # push:
    pull_request:
      types: [edited, opened, reopened]
    workflow_dispatch:
@@ -15,8 +15,8 @@ env:
   # APPLITOOLS_BATCH_NAME: Run ${{ github.run_number }} ${{ github.ref_name }} ${{ github.head_ref }} ${{ github.base_ref }} ${{ github.event.pull_request.head.sha }}
   APPLITOOLS_BATCH_NAME: ${{ github.ref_name }} ${{ github.sha }} ${{ github.event_name }}
   APPLITOOLS_SERVER_URL : "https://eyesapi.applitools.com"
-  # APPLITOOLS_BRANCH: ${{ github.repository }}/${{ github.head_ref }}
-  APPLITOOLS_BRANCH: ${{ github.repository }}/${{ github.ref_name }}
+  APPLITOOLS_BRANCH: ${{ github.repository }}/${{ github.head_ref }}
+  # APPLITOOLS_BRANCH: ${{ github.repository }}/${{ github.ref_name }}
   APPLITOOLS_PARENT_BRANCH: ${{ github.repository }}/${{ github.base_ref }}
   REPOSITORY: ${{ github.repository }}
   ACTION_REF: ${{ github.action_ref }}
@@ -26,6 +26,7 @@ env:
   REF_NAME: ${{ github.ref_name }}
   RUN_ID: ${{ github.run_id }}
   SHA: ${{ github.sha }}
+  HEAD.SHA: ${{ github.event.pull_request.head.sha }}
   EVENT_NAME: ${{ github.event_name }}
 
 
