--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,34 @@
-name: Run Applitools non-PR
+name: Run Applitools 
 
 on: 
    # schedule:
    #     - cron:  '*/15 * * * *'   
-   # push:
+   push:
+   # pull_request:
+   #  types: [edited, opened, reopened]
    workflow_dispatch:
    
 env:
   APPLITOOLS_API_KEY: ${{ secrets.APPLITOOLS_API_KEY_DEMO_1 }}
-  APPLITOOLS_BATCH_ID: ${{ github.sha }}
-  APPLITOOLS_BATCH_NAME: Run ${{ github.run_number }} ${{ github.ref_name }}
+  APPLITOOLS_BATCH_ID: ${{ github.event.pull_request.head.sha }}
+  # APPLITOOLS_BATCH_ID: ${{ github.sha }}
+  # APPLITOOLS_BATCH_NAME: Run ${{ github.run_number }} ${{ github.ref_name }} ${{ github.head_ref }} ${{ github.base_ref }} ${{ github.event.pull_request.head.sha }}
+  APPLITOOLS_BATCH_NAME: ${{ github.ref_name }} ${{ github.sha }} ${{ github.event_name }}
   APPLITOOLS_SERVER_URL : "https://eyesapi.applitools.com"
-  APPLITOOLS_BASELINE_BRANCH: ${{ github.repository }}/${{ github.ref_name }}
-  APPLITOOLS_PARENT_BRANCH: ${{ github.repository }}/${{ github.base_ref }}
+  # APPLITOOLS_BRANCH: ${{ github.repository }}/${{ github.head_ref }}
   APPLITOOLS_BRANCH: ${{ github.repository }}/${{ github.ref_name }}
+  APPLITOOLS_PARENT_BRANCH: ${{ github.repository }}/${{ github.base_ref }}
+  REPOSITORY: ${{ github.repository }}
+  ACTION_REF: ${{ github.action_ref }}
+  BASE_REF: ${{ github.base_ref }}
+  HEAD_REF: ${{ github.head_ref }}
+  REF: ${{ github.ref }}
+  REF_NAME: ${{ github.ref_name }}
+  RUN_ID: ${{ github.run_id }}
+  SHA: ${{ github.sha }}
+  HEAD.SHA: ${{ github.event.pull_request.head.sha }}
+  EVENT_NAME: ${{ github.event_name }}
+
 
 jobs:
     run-monitor-job:
@@ -25,10 +40,10 @@ jobs:
           node-version: [16.x]
 
       steps:
-        - name: Notify Applitools of code push
+        - name: Notify Applitools
           uses: wei/curl@v1
           with:
-           args: -L -d -v '' -X POST "${{env.APPLITOOLS_SERVER_URL}}/api/externals/github/push?apiKey=$${{secrets.APPLITOOLS_API_KEY_DEMO_1}}&CommitSha=${{ env.APPLITOOLS_BATCH_ID }}&BranchName=${{ env.APPLITOOLS_BRANCH }}&ParentBranchName=${{ env.APPLITOOLS_PARENT_BRANCH }}"
+            args: -L -d -v '' -X POST "${{env.APPLITOOLS_SERVER_URL}}/api/externals/github/push?apiKey=$${{secrets.APPLITOOLS_API_KEY_DEMO_1}}&CommitSha=${{ env.APPLITOOLS_BATCH_ID }}&BranchName=${{ env.APPLITOOLS_BRANCH }}&ParentBranchName=${{ env.APPLITOOLS_PARENT_BRANCH }}"
 
         - uses: actions/checkout@v2
           with:
@@ -47,4 +62,4 @@ jobs:
       #     export DISPLAY=:99
       #     chromedrive & sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & npm test
         
-        - run: npm run test
+        - run: npm test
