--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,19 @@
-name: Run Applitools 
+name: Run Applitools on Commit
 
 on: 
    # schedule:
    #     - cron:  '*/15 * * * *'   
    push:
+     branches:    
+       - ${{ github.ref_name }}
    # pull_request:
    #  types: [edited, opened, reopened]
    workflow_dispatch:
    
 env:
   APPLITOOLS_API_KEY: ${{ secrets.APPLITOOLS_API_KEY_DEMO_1 }}
-  APPLITOOLS_BATCH_ID: ${{ github.event.pull_request.head.sha }}
-  # APPLITOOLS_BATCH_ID: ${{ github.sha }}
+  # APPLITOOLS_BATCH_ID: ${{ github.event.pull_request.head.sha }}
+  APPLITOOLS_BATCH_ID: ${{ github.sha }}
   # APPLITOOLS_BATCH_NAME: Run ${{ github.run_number }} ${{ github.ref_name }} ${{ github.head_ref }} ${{ github.base_ref }} ${{ github.event.pull_request.head.sha }}
   APPLITOOLS_BATCH_NAME: ${{ github.ref_name }} ${{ github.sha }} ${{ github.event_name }}
   APPLITOOLS_SERVER_URL : "https://eyesapi.applitools.com"
