--- a/.github/workflows/applitools.yml
+++ b/.github/workflows/applitools.yml
@@ -4,8 +4,8 @@ on:
    # schedule:
    #     - cron:  '*/15 * * * *'   
    # push:
-   pull_request:
-     types: [edited, opened, reopened]
+   # pull_request:
+   #  types: [edited, opened, reopened]
    workflow_dispatch:
    
 env:
