--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,12 +3,12 @@ name: Run Applitools on Commit
 on: 
    # schedule:
    #     - cron:  '*/15 * * * *'   
-   push:
-     branches:    
-       - '**'
+   # push:
+   #  branches:    
+   #    - '**'
    # pull_request:
    #  types: [edited, opened, reopened]
-   workflow_dispatch:
+   # workflow_dispatch:
    
 env:
   APPLITOOLS_API_KEY: ${{ secrets.APPLITOOLS_API_KEY_DEMO_1 }}
