--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
    #    - '**'
    # pull_request:
    #  types: [edited, opened, reopened]
-   # workflow_dispatch:
+   workflow_dispatch:
    
 env:
   APPLITOOLS_API_KEY: ${{ secrets.APPLITOOLS_API_KEY_DEMO_1 }}
@@ -42,10 +42,10 @@ jobs:
           node-version: [16.x]
 
       steps:
-        - name: Notify Applitools
-          uses: wei/curl@v1
-          with:
-            args: -L -d -v '' -X POST "${{env.APPLITOOLS_SERVER_URL}}/api/externals/github/push?apiKey=$${{secrets.APPLITOOLS_API_KEY_DEMO_1}}&CommitSha=${{ env.APPLITOOLS_BATCH_ID }}&BranchName=${{ env.APPLITOOLS_BRANCH }}"
+        # - name: Notify Applitools
+        #  uses: wei/curl@v1
+        #  with:
+        #    args: -L -d -v '' -X POST "${{env.APPLITOOLS_SERVER_URL}}/api/externals/github/push?apiKey=$${{secrets.APPLITOOLS_API_KEY_DEMO_1}}&CommitSha=${{ env.APPLITOOLS_BATCH_ID }}&BranchName=${{ env.APPLITOOLS_BRANCH }}"
             # args: -L -d -v '' -X POST "${{env.APPLITOOLS_SERVER_URL}}/api/externals/github/push?apiKey=$${{secrets.APPLITOOLS_API_KEY_DEMO_1}}&CommitSha=${{ env.APPLITOOLS_BATCH_ID }}&BranchName=${{ env.APPLITOOLS_BRANCH }}&ParentBranchName=${{ env.APPLITOOLS_PARENT_BRANCH }}"
 
         - uses: actions/checkout@v2
