--- a/.github/workflows/applitools.yml
+++ b/.github/workflows/applitools.yml
@@ -11,7 +11,10 @@ on:
 env:
   APPLITOOLS_API_KEY: ${{ secrets.APPLITOOLS_API_KEY_DEMO_1 }}
   # APPLITOOLS_BATCH_ID: ${{ github.event.pull_request.head.sha }}
+  
   APPLITOOLS_BATCH_ID: ${{ github.sha }}
+  # github.event.pull_request.head.sha
+  
   # APPLITOOLS_BATCH_NAME: Run ${{ github.run_number }} ${{ github.ref_name }} ${{ github.head_ref }} ${{ github.base_ref }} ${{ github.event.pull_request.head.sha }}
   APPLITOOLS_BATCH_NAME: ${{ github.ref_name }} ${{ github.sha }} ${{ github.event_name }}
   APPLITOOLS_SERVER_URL : "https://eyesapi.applitools.com"
