--- a/.github/workflows/applitools.yml
+++ b/.github/workflows/applitools.yml
@@ -12,7 +12,7 @@ env:
   APPLITOOLS_API_KEY: ${{ secrets.APPLITOOLS_API_KEY_DEMO_1 }}
   # APPLITOOLS_BATCH_ID: ${{ github.event.pull_request.head.sha }}
   
-  APPLITOOLS_BATCH_ID: ${{ github.sha }}
+  APPLITOOLS_BATCH_ID: ${{ github.event.pull_request.head.sha }}
   # github.event.pull_request.head.sha
   
   # APPLITOOLS_BATCH_NAME: Run ${{ github.run_number }} ${{ github.ref_name }} ${{ github.head_ref }} ${{ github.base_ref }} ${{ github.event.pull_request.head.sha }}
