--- a/.github/workflows/applitools.yml
+++ b/.github/workflows/applitools.yml
@@ -12,7 +12,7 @@ env:
   APPLITOOLS_API_KEY: ${{ secrets.APPLITOOLS_API_KEY_DEMO_1 }}
   # APPLITOOLS_BATCH_ID: ${{ github.event.pull_request.head.sha }}
   
-  APPLITOOLS_BATCH_ID: ${{ github.event.pull_request.head.sha }}
+  APPLITOOLS_BATCH_ID: ${{ github.sha }}
   # github.event.pull_request.head.sha
   
   # APPLITOOLS_BATCH_NAME: Run ${{ github.run_number }} ${{ github.ref_name }} ${{ github.head_ref }} ${{ github.base_ref }} ${{ github.event.pull_request.head.sha }}
@@ -57,12 +57,12 @@ jobs:
           with:
             node-version: ${{ matrix.node-version }}
         
-        - run: npm ci
-        - run: npm install chromedriver --detect_chromedriver_version --no-save
+      #  - run: npm ci
+      #  - run: npm install chromedriver --detect_chromedriver_version --no-save
         
       # < to run headed>
       #  - run: |
       #     export DISPLAY=:99
       #     chromedrive & sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & npm test
         
-        - run: npm test
+      #  - run: npm test
