--- a/.github/workflows/applitools.yml
+++ b/.github/workflows/applitools.yml
@@ -12,15 +12,14 @@ env:
   APPLITOOLS_API_KEY: ${{ secrets.APPLITOOLS_API_KEY_DEMO_1 }}
   # APPLITOOLS_BATCH_ID: ${{ github.event.pull_request.head.sha }}
   
-  APPLITOOLS_BATCH_ID: ${{ github.sha }}
-  # github.event.pull_request.head.sha
+  APPLITOOLS_BATCH_ID: ${{ github.event.pull_request.head.sha || github.sha }}
   
   # APPLITOOLS_BATCH_NAME: Run ${{ github.run_number }} ${{ github.ref_name }} ${{ github.head_ref }} ${{ github.base_ref }} ${{ github.event.pull_request.head.sha }}
   APPLITOOLS_BATCH_NAME: ${{ github.ref_name }} ${{ github.sha }} ${{ github.event_name }}
   APPLITOOLS_SERVER_URL : "https://eyesapi.applitools.com"
-  APPLITOOLS_BRANCH: ${{ github.repository }}/${{ github.head_ref }}
+  APPLITOOLS_BRANCH: ${{ github.repository }}--${{ github.head_ref }}
   # APPLITOOLS_BRANCH: ${{ github.repository }}/${{ github.ref_name }}
-  APPLITOOLS_PARENT_BRANCH: ${{ github.repository }}/${{ github.base_ref }}
+  APPLITOOLS_PARENT_BRANCH: ${{ github.repository }}--${{ github.base_ref }}
   REPOSITORY: ${{ github.repository }}
   ACTION_REF: ${{ github.action_ref }}
   BASE_REF: ${{ github.base_ref }}
@@ -57,12 +56,12 @@ jobs:
           with:
             node-version: ${{ matrix.node-version }}
         
-      #  - run: npm ci
-      #  - run: npm install chromedriver --detect_chromedriver_version --no-save
+        - run: npm ci
+        - run: npm install chromedriver --detect_chromedriver_version --no-save
         
       # < to run headed>
       #  - run: |
       #     export DISPLAY=:99
       #     chromedrive & sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & npm test
         
-      #  - run: npm test
+        - run: npm test
