--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,14 +12,10 @@ on:
    
 env:
   APPLITOOLS_API_KEY: ${{ secrets.APPLITOOLS_API_KEY_DEMO_1 }}
-  # APPLITOOLS_BATCH_ID: ${{ github.event.pull_request.head.sha }}
-  APPLITOOLS_BATCH_ID: ${{ github.sha }}
-  # APPLITOOLS_BATCH_NAME: Run ${{ github.run_number }} ${{ github.ref_name }} ${{ github.head_ref }} ${{ github.base_ref }} ${{ github.event.pull_request.head.sha }}
+  APPLITOOLS_BATCH_ID: ${{ github.event.pull_request.head.sha || github.sha }}
   APPLITOOLS_BATCH_NAME: ${{ github.ref_name }} ${{ github.sha }} ${{ github.event_name }}
   APPLITOOLS_SERVER_URL : "https://eyesapi.applitools.com"
-  # APPLITOOLS_BRANCH: ${{ github.repository }}/${{ github.head_ref }}
-  APPLITOOLS_BRANCH: ${{ github.repository }}/${{ github.ref_name }}
-  # APPLITOOLS_PARENT_BRANCH: ${{ github.repository }}/${{ github.base_ref }}
+  APPLITOOLS_BRANCH: ${{ github.repository }}--${{ github.ref_name }}
   REPOSITORY: ${{ github.repository }}
   ACTION_REF: ${{ github.action_ref }}
   BASE_REF: ${{ github.base_ref }}
@@ -30,7 +26,6 @@ env:
   SHA: ${{ github.sha }}
   HEAD.SHA: ${{ github.event.pull_request.head.sha }}
   EVENT_NAME: ${{ github.event_name }}
-
 
 jobs:
     run-monitor-job:
