--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,10 @@ on:
    # push:
    #  branches:    
    #    - '**'
-   # pull_request:
-   #  types: [edited, opened, reopened]
-   workflow_dispatch:
+    pull_request:
+     types: [edited, opened, reopened]
+    
+    workflow_dispatch:
    
 env:
   APPLITOOLS_API_KEY: ${{ secrets.APPLITOOLS_API_KEY_DEMO_1 }}
