--- a/.github/workflows/applitools.yml
+++ b/.github/workflows/applitools.yml
@@ -3,22 +3,17 @@ name: Run Applitools PR
 on: 
    # schedule:
    #     - cron:  '*/15 * * * *'   
-   # push:
+     push:
      pull_request:
       types: [edited, opened, reopened]
    # workflow_dispatch:
    
 env:
   APPLITOOLS_API_KEY: ${{ secrets.APPLITOOLS_API_KEY_DEMO_1 }}
-  # APPLITOOLS_BATCH_ID: ${{ github.event.pull_request.head.sha }}
-  
   APPLITOOLS_BATCH_ID: ${{ github.event.pull_request.head.sha || github.sha }}
-  
-  # APPLITOOLS_BATCH_NAME: Run ${{ github.run_number }} ${{ github.ref_name }} ${{ github.head_ref }} ${{ github.base_ref }} ${{ github.event.pull_request.head.sha }}
   APPLITOOLS_BATCH_NAME: ${{ github.head_ref }} ${{ github.event.pull_request.head.sha || github.sha }} ${{ github.event_name }}
   APPLITOOLS_SERVER_URL : "https://eyesapi.applitools.com"
-  APPLITOOLS_BRANCH: ${{ github.repository }}/${{ github.head_ref }}
-  # APPLITOOLS_BRANCH: ${{ github.repository }}/${{ github.ref_name }}
+  APPLITOOLS_BRANCH: ${{ github.repository }}/${{ github.head_ref || github.ref_name}}
   APPLITOOLS_PARENT_BRANCH: ${{ github.repository }}/${{ github.base_ref }}
   REPOSITORY: ${{ github.repository }}
   ACTION_REF: ${{ github.action_ref }}
@@ -43,6 +38,7 @@ jobs:
 
       steps:
         - name: Notify Applitools
+          if: github.event_name != 'pull_request'
           uses: wei/curl@v1
           with:
             args: -L -d -v '' -X POST "${{env.APPLITOOLS_SERVER_URL}}/api/Externals/github/push?apiKey=$${{secrets.APPLITOOLS_API_KEY_DEMO_1}}&CommitSha=${{ env.APPLITOOLS_BATCH_ID }}&BranchName=${{ env.APPLITOOLS_BRANCH }}"
