fix batch name for push on main

--- a/.github/workflows/applitools.yml
+++ b/.github/workflows/applitools.yml
@@ -11,7 +11,7 @@ on:
 env:
   APPLITOOLS_API_KEY: ${{ secrets.APPLITOOLS_API_KEY_DEMO_1 }}
   APPLITOOLS_BATCH_ID: ${{ github.event.pull_request.head.sha || github.sha }}
-  APPLITOOLS_BATCH_NAME: ${{ github.head_ref }} ${{ github.event.pull_request.head.sha || github.sha }} ${{ github.event_name }}
+  APPLITOOLS_BATCH_NAME: ${{ github.head_ref || github.ref_name }} ${{ github.event.pull_request.head.sha || github.sha }} ${{ github.event_name }}
   APPLITOOLS_SERVER_URL : "https://eyesapi.applitools.com"
   APPLITOOLS_BRANCH: ${{ github.repository }}/${{ github.head_ref || github.ref_name}}
   APPLITOOLS_PARENT_BRANCH: ${{ github.repository }}/${{ github.base_ref }}
